--- a/src/admin/css/admin.responsive.css
+++ b/src/admin/css/admin.responsive.css
@@ -58,7 +58,7 @@
     }
     
     /* Fit formsets on single row */
-    .new-missing {
+    .column {
         width: 100%;
     }    
     
@@ -127,7 +127,7 @@
     }
     
     /* Fit formsets on single row */
-    .new-missing {
+    .column {
         width: 100%;
     }    
     
